--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
       <div class="container text-center">
         <div class="row">
           <div class="col-lg-10 mx-auto">
-            <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
+            
+              <img src="img/fotoJoren.jpg" class="rounded-circle" alt="Foto van mezelf">
+              
+            <h2>Student @UCLL Leuven</h2>
             <p class="lead mb-5">This theme features a flexible, UX friendly sidebar menu and stock photos from our friends at
               <a href="https://unsplash.com/">Unsplash</a>!</p>
             <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What We Offer</a>
