--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="container text-center my-auto">
         <h1 class="mb-1">Joren Vermeir</h1>
         <h3 class="mb-5">
-          <em>Mijn portfolio</em>
+          <em>My portfolio</em>
         </h3>
         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
       </div>
@@ -72,9 +72,8 @@
               <img src="img/fotoJoren.jpg" class="rounded-circle" alt="Foto van mezelf">
               
             <h2>Student @UCLL Leuven</h2>
-            <p class="lead mb-5">This theme features a flexible, UX friendly sidebar menu and stock photos from our friends at
-              <a href="https://unsplash.com/">Unsplash</a>!</p>
-            <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What We Offer</a>
+            <p class="lead mb-5"></p>
+            <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What I Offer</a>
           </div>
         </div>
       </div>
@@ -84,8 +83,8 @@
     <section class="content-section bg-primary text-white text-center" id="services">
       <div class="container">
         <div class="content-section-heading">
-          <h3 class="text-secondary mb-0">Services</h3>
-          <h2 class="mb-5">What We Offer</h2>
+          <h3 class="text-secondary mb-0">Competences</h3>
+          <h2 class="mb-5">What I Offer</h2>
         </div>
         <div class="row">
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
@@ -93,7 +92,7 @@
               <i class="icon-screen-smartphone"></i>
             </span>
             <h4>
-              <strong>Responsive</strong>
+              <strong>CV</strong>
             </h4>
             <p class="text-faded mb-0">Looks great on any screen size!</p>
           </div>
@@ -102,7 +101,7 @@
               <i class="icon-pencil"></i>
             </span>
             <h4>
-              <strong>Redesigned</strong>
+              <strong>Projects</strong>
             </h4>
             <p class="text-faded mb-0">Freshly redesigned for Bootstrap 4.</p>
           </div>
@@ -111,7 +110,7 @@
               <i class="icon-like"></i>
             </span>
             <h4>
-              <strong>Favorited</strong>
+              <strong>Projects</strong>
             </h4>
             <p class="text-faded mb-0">Millions of users
               <i class="fa fa-heart"></i>
