--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="row">
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
-              <i class="icon-screen-smartphone"></i>
+              <i class="fa fa-file-text-o"></i>
             </span>
             <h4>
               <strong>CV</strong>
@@ -98,7 +98,7 @@
           </div>
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
-              <i class="icon-pencil"></i>
+              <i class="fa fa-desktop"></i>
             </span>
             <h4>
               <strong>Projects</strong>
@@ -110,7 +110,7 @@
               <i class="icon-like"></i>
             </span>
             <h4>
-              <strong>Projects</strong>
+              <strong>Competence matrix</strong>
             </h4>
             <p class="text-faded mb-0">Millions of users
               <i class="fa fa-heart"></i>
@@ -118,10 +118,10 @@
           </div>
           <div class="col-lg-3 col-md-6">
             <span class="service-icon rounded-circle mx-auto mb-3">
-              <i class="icon-mustache"></i>
+              <i class="fa fa-github"></i>
             </span>
             <h4>
-              <strong>Question</strong>
+              <strong>Github</strong>
             </h4>
             <p class="text-faded mb-0">I mustache you a question...</p>
           </div>
