--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <h4>
               <strong>CV</strong>
             </h4>
-            <p class="text-faded mb-0">Looks great on any screen size!</p>
+            <p class="text-faded mb-0">Download my curriculum vitae</p>
           </div>
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
@@ -123,7 +123,7 @@
             <h4>
               <strong>Github</strong>
             </h4>
-            <p class="text-faded mb-0">I mustache you a question...</p>
+            <p class="text-faded mb-0"> Visit my Github page!</p>
           </div>
         </div>
       </div>
