--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
     <section class="content-section bg-primary text-white text-center" id="services">
       <div class="container">
         <div class="content-section-heading">
-          <h3 class="text-secondary mb-0">Competences</h3>
-          <h2 class="mb-5">What I Offer</h2>
+          <h3 class="text-secondary mb-0">Links</h3>
+          <h2 class="mb-5">Find out more about me</h2>
         </div>
         <div class="row">
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
