--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="container">
         <div class="content-section-heading">
           <h3 class="text-secondary mb-0">Links</h3>
-          <h2 class="mb-5">Find out more about me</h2>
+          <h2 class="mb-5">About me</h2>
         </div>
         <div class="row">
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
