--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <section class="content-section bg-primary text-white text-center" id="services">
       <div class="container">
         <div class="content-section-heading">
-          <h3 class="text-secondary mb-0">Competences</h3>
+          <h3 class="text-secondary mb-0">Links</h3>
           <h2 class="mb-5">What I Offer</h2>
         </div>
         <div class="row">
@@ -103,7 +103,7 @@
             <h4>
               <strong>Projects</strong>
             </h4>
-            <p class="text-faded mb-0">Freshly redesigned for Bootstrap 4.</p>
+            <p class="text-faded mb-0">Explore my projects!</p>
           </div>
           <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
@@ -112,9 +112,7 @@
             <h4>
               <strong>Competence matrix</strong>
             </h4>
-            <p class="text-faded mb-0">Millions of users
-              <i class="fa fa-heart"></i>
-              Start Bootstrap!</p>
+            <p class="text-faded mb-0">View my comptences</p>
           </div>
           <div class="col-lg-3 col-md-6">
             <span class="service-icon rounded-circle mx-auto mb-3">
