--- a/index.html
+++ b/index.html
@@ -112,9 +112,7 @@
             <h4>
               <strong>Competence matrix</strong>
             </h4>
-            <p class="text-faded mb-0">Millions of users
-              <i class="fa fa-heart"></i>
-              Start Bootstrap!</p>
+            <p class="text-faded mb-0">Take a look at my competence matrix</p>
           </div>
           <div class="col-lg-3 col-md-6">
             <span class="service-icon rounded-circle mx-auto mb-3">
