--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <h4>
               <strong>Competence matrix</strong>
             </h4>
-            <p class="text-faded mb-0">Take a look at my competence matrix</p>
+            <p class="text-faded mb-0">Take a look at my competence matrix!</p>
           </div>
           <div class="col-lg-3 col-md-6">
             <span class="service-icon rounded-circle mx-auto mb-3">
@@ -149,33 +149,33 @@
             <a class="portfolio-item" href="#">
               <span class="caption">
                 <span class="caption-content">
-                  <h2>Stationary</h2>
-                  <p class="mb-0">A yellow pencil with envelopes on a clean, blue backdrop!</p>
+                  <h2>Python</h2>
+                  <p class="mb-0">A Python script that sends me a massage when and where in need to be for a course.</p>
                 </span>
               </span>
-              <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
+              <img class="img-fluid" src="img/python.jpg" alt="python">
             </a>
           </div>
           <div class="col-lg-6">
             <a class="portfolio-item" href="#">
               <span class="caption">
                 <span class="caption-content">
-                  <h2>Ice Cream</h2>
-                  <p class="mb-0">A dark blue background with a colored pencil, a clip, and a tiny ice cream cone!</p>
+                  <h2>Java</h2>
+                  <p class="mb-0">A group project in Java using JavaFx for UI. </p>
                 </span>
               </span>
-              <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
+              <img class="img-fluid" src="img/java2.jpg" alt="java">
             </a>
           </div>
           <div class="col-lg-6">
             <a class="portfolio-item" href="#">
               <span class="caption">
                 <span class="caption-content">
-                  <h2>Strawberries</h2>
-                  <p class="mb-0">Strawberries are such a tasty snack, especially with a little sugar on top!</p>
+                  <h2>Websites</h2>
+                  <p class="mb-0">Different sites i have made using different techniques.</p>
                 </span>
               </span>
-              <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
+              <img class="img-fluid" src="img/website.jpg" alt="">
             </a>
           </div>
           <div class="col-lg-6">
@@ -186,7 +186,7 @@
                   <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
                 </span>
               </span>
-              <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
+              <img class="img-fluid" src="img/website.jpg" alt="">
             </a>
           </div>
         </div>
