--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                   <p class="mb-0">A Python script that sends me a massage when and where in need to be for a course.</p>
                 </span>
               </span>
-              <img class="img-fluid" src="img/python.jpg" alt="python">
+              <img class="img-fluid" src="img/python2.jpg" alt="python">
             </a>
           </div>
           <div class="col-lg-6">
@@ -161,10 +161,11 @@
               <span class="caption">
                 <span class="caption-content">
                   <h2>Java</h2>
+                    
                   <p class="mb-0">A group project in Java using JavaFx for UI. </p>
                 </span>
               </span>
-              <img class="img-fluid" src="img/java2.jpg" alt="java">
+              <img class="img-fluid" src="img/java3.jpg" alt="java">
             </a>
           </div>
           <div class="col-lg-6">
@@ -175,7 +176,7 @@
                   <p class="mb-0">Different sites i have made using different techniques.</p>
                 </span>
               </span>
-              <img class="img-fluid" src="img/website.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
             </a>
           </div>
           <div class="col-lg-6">
@@ -186,7 +187,7 @@
                   <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
                 </span>
               </span>
-              <img class="img-fluid" src="img/website.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
             </a>
           </div>
         </div>
