--- a/index.html
+++ b/index.html
@@ -176,18 +176,18 @@
                   <p class="mb-0">Different sites i have made using different techniques.</p>
                 </span>
               </span>
-              <img class="img-fluid" src="img/portfolio-3.jpg" alt="">
+              <img class="img-fluid" src="img/surfen.jpg" alt="">
             </a>
           </div>
           <div class="col-lg-6">
             <a class="portfolio-item" href="#">
               <span class="caption">
                 <span class="caption-content">
-                  <h2>Workspace</h2>
-                  <p class="mb-0">A yellow workspace with some scissors, pencils, and other objects.</p>
+                  <h2>Diagrams</h2>
+                  <p class="mb-0">Diagrams i have made for applications and databases.</p>
                 </span>
               </span>
-              <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
+              <img class="img-fluid" src="img/diagram.jpg" alt="">
             </a>
           </div>
         </div>
@@ -222,12 +222,12 @@
             </a>
           </li>
           <li class="list-inline-item">
-            <a class="social-link rounded-circle text-white mr-3" href="#">
+            <a class="social-link rounded-circle text-white mr-3" href="https://twitter.com/JorenVermeir">
               <i class="icon-social-twitter"></i>
             </a>
           </li>
           <li class="list-inline-item">
-            <a class="social-link rounded-circle text-white" href="#">
+            <a class="social-link rounded-circle text-white" href="https://github.com/JorenVermeir">
               <i class="icon-social-github"></i>
             </a>
           </li>
