--- a/index.html
+++ b/index.html
@@ -183,11 +183,11 @@
             <a class="portfolio-item" href="#">
               <span class="caption">
                 <span class="caption-content">
-                  <h2>Diagrams</h2>
-                  <p class="mb-0">Diagrams i have made for applications and databases.</p>
+                  <h2>Testing</h2>
+                  <p class="mb-0">Different tests made with Junit and cucumber. Includes test reports.</p>
                 </span>
               </span>
-              <img class="img-fluid" src="img/diagram.jpg" alt="">
+              <img class="img-fluid" src="img/test.jpg" alt="">
             </a>
           </div>
         </div>
@@ -217,8 +217,8 @@
       <div class="container">
         <ul class="list-inline mb-5">
           <li class="list-inline-item">
-            <a class="social-link rounded-circle text-white mr-3" href="#">
-              <i class="icon-social-facebook"></i>
+            <a class="social-link rounded-circle text-white mr-3" href="https://www.linkedin.com/in/joren-vermeir-15980b135/">
+              <i class="fa fa-linkedin"></i>
             </a>
           </li>
           <li class="list-inline-item">
@@ -232,7 +232,7 @@
             </a>
           </li>
         </ul>
-        <p class="text-muted small mb-0">Copyright &copy; Your Website 2017</p>
+        <p class="text-muted small mb-0">Copyright &copy; Joren Vermeir 2018</p>
       </div>
     </footer>
 
