--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-
+    <link rel="icon" href="glyphicon glyphicon-sunglasses">
     <title>Joren Vermeir - Mijn porfolio</title>
 
     <!-- Bootstrap Core CSS -->
@@ -223,17 +223,17 @@
       <div class="container">
         <ul class="list-inline mb-5">
           <li class="list-inline-item">
-            <a class="social-link rounded-circle text-white mr-3" href="https://www.linkedin.com/in/joren-vermeir-15980b135/">
+            <a class="social-link rounded-circle text-white mr-3" href="https://www.linkedin.com/in/joren-vermeir-15980b135/" target="_blank">
               <i class="fa fa-linkedin"></i>
             </a>
           </li>
           <li class="list-inline-item">
-            <a class="social-link rounded-circle text-white mr-3" href="https://twitter.com/JorenVermeir">
+            <a class="social-link rounded-circle text-white mr-3" href="https://twitter.com/JorenVermeir" target="_blank">
               <i class="icon-social-twitter"></i>
             </a>
           </li>
           <li class="list-inline-item">
-            <a class="social-link rounded-circle text-white" href="https://github.com/JorenVermeir">
+            <a class="social-link rounded-circle text-white" href="https://github.com/JorenVermeir" target="_blank">
               <i class="icon-social-github"></i>
             </a>
           </li>
