--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
     <section class="content-section bg-primary text-white text-center" id="services">
       <div class="container">
         <div class="content-section-heading">
-          <h3 class="text-secondary mb-0">Competences</h3>
-          <h2 class="mb-5">What I Offer</h2>
+          <h3 class="text-secondary mb-0"></h3>
+          <h2 class="mb-5">Informatiom</h2>
         </div>
         <div class="row">
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
@@ -99,12 +99,12 @@
           </div>
           <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
-              <i class="fa fa-desktop"></i>
+              <i class="fa fa-linkedin"></i>
             </span>
             <h4>
-              <strong>Projects</strong>
+              <strong>LinkedIn</strong>
             </h4>
-            <p class="text-faded mb-0">Freshly redesigned for Bootstrap 4.</p>
+            <p class="text-faded mb-0">Find me on <a class="text-white" href="https://www.linkedin.com/in/joren-vermeir-15980b135/" target="_blank">LinkedIn</a></p>
           </div>
           <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
             <span class="service-icon rounded-circle mx-auto mb-3">
