swot analyse toegevoegd + vewijzingen naar github

--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
               <i class="icon-like"></i>
             </span>
             <h4>
-              <strong>Competence matrix</strong>
+              <strong>SWOT Analysis</strong>
             </h4>
-            <p class="text-faded mb-0">Take a look at my competence matrix!</p>
+            <p class="text-faded mb-0">Take a look at my <a class="text-white" href="docs/swot.pdf">SWOT Analysis!</a></p>
           </div>
           <div class="col-lg-3 col-md-6">
             <span class="service-icon rounded-circle mx-auto mb-3">
@@ -137,7 +137,7 @@
         </div>
         <div class="row no-gutters">
           <div class="col-lg-6">
-            <a class="portfolio-item" href="#">
+            <a class="portfolio-item" href="https://github.com/JorenVermeir/MyProjects/tree/master/PushUurrooster">
               <span class="caption">
                 <span class="caption-content">
                   <h2>Python</h2>
@@ -148,23 +148,23 @@
             </a>
           </div>
           <div class="col-lg-6">
-            <a class="portfolio-item" href="#">
+            <a class="portfolio-item" href="https://github.com/JorenVermeir/MyProjects/tree/master/Yahtzee">
               <span class="caption">
                 <span class="caption-content">
                   <h2>Java</h2>
                     
-                  <p class="mb-0">A group project in Java using JavaFx for UI. </p>
+                  <p class="mb-0">Java Yahtzee game using JavaFx for UI taking OOO principles into account.</p>
                 </span>
               </span>
               <img class="img-fluid" src="img/java3.jpg" alt="java">
             </a>
           </div>
           <div class="col-lg-6">
-            <a class="portfolio-item" href="#">
+            <a class="portfolio-item" href="https://github.com/JorenVermeir/MyProjects/tree/master/SpringApplication">
               <span class="caption">
                 <span class="caption-content">
-                  <h2>Websites</h2>
-                  <p class="mb-0">Different sites i have made using different techniques.</p>
+                  <h2>Website</h2>
+                  <p class="mb-0">Website made with the Spring framework.  Made in Intellij.</p>
                 </span>
               </span>
               <img class="img-fluid" src="img/surfen.jpg" alt="">
