--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <h3 class="mb-5">
           <em>My portfolio</em>
         </h3>
-        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">About me</a>
       </div>
       <div class="overlay"></div>
     </header>
@@ -72,7 +72,7 @@
               
             <h2>Student @UCLL Leuven</h2>
             <p class="lead mb-5"></p>
-            <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What I Offer</a>
+            <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">My information</a>
           </div>
         </div>
       </div>
@@ -133,7 +133,7 @@
       <div class="container">
         <div class="content-section-heading text-center">
           <h3 class="text-secondary mb-0">Portfolio</h3>
-          <h2 class="mb-5">Recent Projects</h2>
+          <h2 class="mb-5">My Projects</h2>
         </div>
         <div class="row no-gutters">
           <div class="col-lg-6">
@@ -171,7 +171,7 @@
             </a>
           </div>
           <div class="col-lg-6">
-            <a class="portfolio-item" href="#">
+            <a class="portfolio-item" href="https://github.com/JorenVermeir/MyProjects/tree/master/Testing">
               <span class="caption">
                 <span class="caption-content">
                   <h2>Testing</h2>
